fixing layout issues

--- a/app/assets/stylesheets/spree/frontend/layouts/spree_application.scss
+++ b/app/assets/stylesheets/spree/frontend/layouts/spree_application.scss
@@ -10,7 +10,7 @@ header {
   backface-visibility: hidden;
   letter-spacing: 2.2px;
   margin: auto;
-  padding: 5px 0;
+  // padding: 5px 0;
   text-align: center;
   transition: background-color $fast;
   @media #{$tablet-portrait} {
